objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Campaign_Member__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,  Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOWNCAMPAIGNMEMBER__c</fullName>
        <formula>if( $User.Id =  Contact.Account.Sales_PersonID__r.User__r.Id, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IOWNCAMPAIGNMEMBER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LY_Furniture_Spend_Campaign__c</fullName>
        <formula>Contact.Account.Furniture_LY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LY Furniture Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Furniture_Spend_Campaign__c</fullName>
        <formula>Contact.Account.Furniture_TY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Furniture Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_TY_Campaign__c</fullName>
        <formula>Contact.Account.YTD_Sales_TY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Sales TY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>et4ae5__Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>